[package]
name = "tbg"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"                                                # for terminal stuff
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"                                                      # for datetimes in the created_at and updated_at columns
cpal = "0.15"                                                       # for music
rand = "0.8"                                                        # used in music and probably other stuff soon
regex = "1"
